--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "2ed8b533",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "230f6339",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
       "[WARNING] found PLATE_ONLY plate SANG_001, expanding to well-level\n",
       "[INFO] found 288 samples across 3 plates\n",
       "[INFO] Checking and excluding blank samples\n",
-      "[INFO] Blanks located: 274 samples of 288 left for downstream analysis\n",
+      "[WARNING] 14 blanks located across 3 plates, 274 samples of 288 left for downstream analysis\n",
       "[INFO] validating values in column 'ORGANISM_PART'\n",
       "[INFO] excluding 0 [] samples without data in 'ORGANISM_PART'\n",
       "[INFO] validating values in column 'PRESERVATIVE_SOLUTION'\n",
@@ -73,6 +73,9 @@
       "[INFO] excluding 0 [] samples without data in 'PLATE_TEMPERATURE_STORAGE'\n",
       "[INFO] validating numeric format in ELEVATION\n",
       "[INFO] excluding 288 [''] samples without data in 'ELEVATION'\n",
+      "[INFO] validating contributors in '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'\n",
+      "[WARNING] trailing spaces found in column 'FIRST_NAME', SERIES [0]. Removing for validation\n",
+      "[WARNING] suspect template contributor was not removed\n",
       "[INFO] # ended validate_bioscan_partner_manifest_v.2.0\n"
      ]
     }
@@ -147,6 +150,8 @@
     "    # MISC_METADATA not checked\n",
     "    # IDENTIFIED_BY not checked\n",
     "    # IDENTIFIER_AFFILIATION not checked\n",
+    "    \n",
+    "    validate_contributors(fn)\n",
     "        \n",
     "    logging.info('# ended validate_bioscan_partner_manifest_v.{}'.format(version))\n",
     "\n",
