--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "def get_data(fn, sheet='TAB1 Specimen Metadata Entry'):\n",
+    "def get_data(fn, sheet='TAB 2 Metadata Entry'):\n",
     "\n",
     "    logging.info('reading data from {!r}'.format(fn))\n",
     "    \n",
@@ -376,7 +376,7 @@
      "text": [
       "[INFO] Checking and excluding blank samples\n",
       "[ERROR] last well H12 is not blank at SERIES [288]: in ORGANISM_PART, expected \"NOT_APPLICABLE\", found ['TEST']. These samples will be included in further analysis.\n",
-      "[INFO] Blanks located: 286 samples of 288 left for downstream analysis\n"
+      "[WARNING] 2 blanks located across 3 plates, 286 samples of 288 left for downstream analysis\n"
      ]
     },
     {
@@ -411,9 +411,9 @@
     "                        non_blank_last_well_df.ORGANISM_PART.to_list()\n",
     "        ))\n",
     "    \n",
-    "    # exclude blanks from downstream analysis    \n",
-    "    logging.info('Blanks located: {} samples of {} left for downstream analysis'.format(\n",
-    "        non_blank_df.shape[0], df.shape[0]))\n",
+    "    # raise to warning for sanity check\n",
+    "    logging.warning('{} blanks located across {} plates, {} samples of {} left for downstream analysis'.format(\n",
+    "        is_blank.sum(), df.RACK_OR_PLATE_ID.nunique(), non_blank_df.shape[0], df.shape[0]))\n",
     "    \n",
     "    \n",
     "    return is_blank\n",
@@ -982,7 +982,7 @@
       "[INFO] validating PREDICTED_GENUS against NCBI\n",
       "[INFO] genus: using only first matching rank for Anopheles (taxid 7164): genus\n",
       "[INFO] validating PREDICTED_SCIENTIFIC_NAME against NCBI\n",
-      "[ERROR] species: {'', 'Anopheles test', 'Anopheles stricklandi'} not found in NCBI Taxonomy\n",
+      "[ERROR] species: {'Anopheles stricklandi', '', 'Anopheles test'} not found in NCBI Taxonomy\n",
       "[ERROR] species: \"Anopheles stricklandi\" found in Harbach list, but not in NCBI Taxonomy\n",
       "[INFO] cannot validate PREDICTED_SCIENTIFIC_NAME for \"Anopheles test\", skipping taxonomy consistency check\n",
       "[INFO] cannot validate PREDICTED_SCIENTIFIC_NAME for \"Anopheles stricklandi\", skipping taxonomy consistency check\n",
@@ -1688,6 +1688,59 @@
     "        logging.error(f'{before.name} values are later than {after.name} for SERIES'\n",
     "                      f' {ctdf[date_conflict].index.to_list()}')\n",
     "compare_dates(bd, ad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] validating contributors in '../data/Anopheles_Metadata_Manifest_V4.0_20220825.xlsx'\n",
+      "[WARNING] trailing spaces found in column 'FIRST_NAME', SERIES [0, 1]. Removing for validation\n",
+      "[WARNING] suspect template contributor was not removed\n",
+      "[ERROR] duplicated names ['Darwin Charles R.']\n",
+      "[ERROR] invalid email addresses ['darwin_darwin.darwin']\n",
+      "[ERROR] confirmation lacking for any contributors\n"
+     ]
+    }
+   ],
+   "source": [
+    "def validate_contributors(fn, contrib_sheet='TAB 1 Contributors'):\n",
+    "    \n",
+    "    df = logging.info('validating contributors in {!r}'.format(fn))\n",
+    "    \n",
+    "    df = pd.read_excel(fn, dtype=str, keep_default_na=False,\n",
+    "                       sheet_name=contrib_sheet)\n",
+    "    \n",
+    "    df = remove_trailing_spaces(df)\n",
+    "    \n",
+    "    df['NAME'] = df['SURNAME'] + ' ' + df['FIRST_NAME']\n",
+    "    is_template_name = (df['NAME'] == 'Darwin Charles R.')\n",
+    "    if is_template_name.any():\n",
+    "        logging.warning('suspect template contributor was not removed')\n",
+    "    \n",
+    "    is_dup_name = df['NAME'].duplicated()\n",
+    "    if is_dup_name.any():\n",
+    "        logging.error('duplicated names {}'.format(\n",
+    "                df.loc[is_dup_name, 'NAME'].to_list()))\n",
+    "        \n",
+    "    is_valid_email = df['EMAIL ADDRESS'].str.match('[A-z0-9._%+-]+@[A-z0-9.-]+\\.[A-z]{2,}')\n",
+    "    if not is_valid_email.all():\n",
+    "        logging.error('invalid email addresses {}'.format(\n",
+    "                df.loc[~is_valid_email, 'EMAIL ADDRESS'].to_list()))\n",
+    "    \n",
+    "    # TODO confirmation for contributing partners\n",
+    "    is_confirmed = (df['CONFIRMATION'] == 'YES')\n",
+    "    if not is_confirmed.any():\n",
+    "        logging.error('confirmation lacking for any contributors')\n",
+    "        \n",
+    "    return df\n",
+    "        \n",
+    "df = validate_contributors(anospp_fn)"
    ]
   },
   {
