validate test bioscan manifest

--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "230f6339",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,8 @@
    ],
    "source": [
     "def validate_bioscan(fn, template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
-    "                     verbose=False, version='2.0', samples_sheet='TAB 2 Metadata Entry'):\n",
+    "                     verbose=False, version='2.0', \n",
+    "                     samples_sheet='TAB 2 Metadata Entry', contrib_sheet='TAB 1 Contributors'):\n",
     "    '''\n",
     "    BIOSCAN partner manifest validation\n",
     "    Validation follows the order of columns order in data entry sheet\n",
@@ -151,7 +152,7 @@
     "    # IDENTIFIED_BY not checked\n",
     "    # IDENTIFIER_AFFILIATION not checked\n",
     "    \n",
-    "    validate_contributors(fn)\n",
+    "    validate_contributors(fn, contrib_sheet=contrib_sheet)\n",
     "        \n",
     "    logging.info('# ended validate_bioscan_partner_manifest_v.{}'.format(version))\n",
     "\n",
@@ -166,16 +167,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "597705bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "Exception",
+     "evalue": "Setup complete",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/g7/vnlptw7d5pb544zsj_bypk44000h93/T/ipykernel_24102/1375769833.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Setup complete'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mException\u001b[0m: Setup complete"
+     ]
+    }
+   ],
+   "source": [
+    "raise Exception('Setup complete')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6b170f12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WARNING] # manifest ../results/20221018_biosc_test/NBGW-2206-Manifest-V2.0.xlsx\n",
+      "[WARNING] extra columns in filled manifest compared to template: {'SYMBIONT', 'GAL', 'TAXON_ID', 'SCIENTIFIC_NAME', 'PREDICTED_TAXON_ID', 'SPECIMEN_ID', 'HAZARD_GROUP', 'REGULATORY_COMPLIANCE', 'CATCH_SOLUTION'}\n",
+      "[WARNING] 31 blanks located across 31 plates, 2945 samples of 2976 left for downstream analysis\n",
+      "[ERROR] invalid times in 'DURATION_OF_COLLECTION': ['NOT_APPLICABLE']\n",
+      "[ERROR] invalid values in 'COLLECTION_METHOD': {'OTHER'}\n",
+      "[ERROR] order: {'Opilones'} not found in NCBI Taxonomy\n",
+      "[WARNING] order: found unexpected rank for Acari (taxid 6933): subclass\n",
+      "[WARNING] order: found unexpected rank for Collembola (taxid 30001): class\n",
+      "[WARNING] trailing spaces found in column 'FIRST_NAME', SERIES [0]. Removing for validation\n",
+      "[WARNING] suspect template contributor was not removed\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn = '../results/20221018_biosc_test/NBGW-2206-Manifest-V2.0.xlsx'\n",
+    "df = validate_bioscan(fn, samples_sheet='Metadata Entry', contrib_sheet='TAB1 Contributors')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b170f12",
+   "id": "e100a8f3",
    "metadata": {},
    "outputs": [],
    "source": []
