validate freetext fields (resolves #2) and species ID risk

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -33,7 +33,7 @@
       "[WARNING] # manifest ../data/Anopheles_Metadata_Manifest_V4.0_20220825.xlsx\n",
       "[INFO] reading data from '../data/Anopheles_Metadata_Manifest_V4.0_20220825.xlsx'\n",
       "[WARNING] trailing spaces found in column 'COLLECTION_LOCATION', SERIES [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95]. Removing for validation\n",
-      "[WARNING] trailing spaces found in column 'PREDICTED_SCIENTIFIC_NAME', SERIES [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95]. Removing for validation\n",
+      "[WARNING] trailing spaces found in column 'PREDICTED_SCIENTIFIC_NAME', SERIES [2, 3, 4, 5, 6, 7, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95]. Removing for validation\n",
       "[WARNING] trailing spaces found in column 'PRESERVATION_APPROACH', SERIES [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274, 275, 276, 277, 278, 279, 280, 281, 282, 283, 284, 285, 286, 287, 288]. Removing for validation\n",
       "[WARNING] trailing spaces found in column 'HABITAT', SERIES [2]. Removing for validation\n",
       "[INFO] reading data from '../data/Anopheles_Metadata_Manifest_V4.0_20220825.xlsx'\n",
@@ -48,9 +48,7 @@
       "[ERROR] last well H12 is not blank at SERIES [288]: in ORGANISM_PART, expected \"NOT_APPLICABLE\", found ['TEST']. These samples will be included in further analysis.\n",
       "[WARNING] 2 blanks located across 3 plates, 286 samples of 288 left for downstream analysis\n",
       "[INFO] validating values in column 'PRESERVATIVE_SOLUTION'\n",
-      "[INFO] excluding 0 [] samples without data in 'PRESERVATIVE_SOLUTION'\n",
       "[INFO] validating values in column 'ORGANISM_PART'\n",
-      "[INFO] excluding 0 [] samples without data in 'ORGANISM_PART'\n",
       "[ERROR] invalid values in 'ORGANISM_PART': {'TEST'}\n",
       "[INFO] validating date column 'DATE_OF_COLLECTION'\n",
       "[INFO] excluding 0 ['NOT_COLLECTED', ''] samples without data in 'DATE_OF_COLLECTION'\n",
@@ -58,25 +56,26 @@
       "[ERROR] future dates in 'DATE_OF_COLLECTION': [Timestamp('2117-08-21 00:00:00')]\n",
       "[INFO] validating country with coordinates\n",
       "[INFO] validating values in column 'SAMPLING_LOCATION_SIZE'\n",
-      "[INFO] excluding 0 [] samples without data in 'SAMPLING_LOCATION_SIZE'\n",
       "[INFO] validating taxonomy against NCBI\n",
       "[INFO] validating PREDICTED_ORDER_OR_GROUP against NCBI\n",
       "[INFO] validating PREDICTED_FAMILY against NCBI\n",
       "[INFO] validating PREDICTED_GENUS against NCBI\n",
       "[INFO] genus: using only first matching rank for Anopheles (taxid 7164): genus\n",
       "[INFO] validating PREDICTED_SCIENTIFIC_NAME against NCBI\n",
-      "[ERROR] species: {'Anopheles test', 'Anopheles stricklandi'} not found in NCBI Taxonomy\n",
+      "[ERROR] species: {'Anopheles stricklandi', 'Anopheles test'} not found in NCBI Taxonomy\n",
       "[ERROR] species: \"Anopheles stricklandi\" found in Harbach list, but not in NCBI Taxonomy\n",
       "[INFO] cannot validate PREDICTED_SCIENTIFIC_NAME for \"Anopheles test\", skipping taxonomy consistency check\n",
       "[INFO] cannot validate PREDICTED_SCIENTIFIC_NAME for \"Anopheles stricklandi\", skipping taxonomy consistency check\n",
       "[INFO] validating values in column 'SPECIMEN_IDENTITY_RISK'\n",
-      "[INFO] excluding 0 [] samples without data in 'SPECIMEN_IDENTITY_RISK'\n",
       "[ERROR] invalid values in 'SPECIMEN_IDENTITY_RISK': {''}\n",
+      "[INFO] validating SPECIMEN_IDENTITY_RISK\n",
+      "[ERROR] SPECIMEN_IDENTITY_RISK should be Y in SERIES [8]\n",
+      "[INFO] validating freetext chars in IDENTIFIED_HOW\n",
+      "[INFO] excluding 95 [''] samples without data in 'IDENTIFIED_HOW'\n",
+      "[ERROR] found non-standard characters in column IDENTIFIED_HOW, SERIES [6]. Regex: \"^[A-z0-9.,\\-_ ]+$\"\n",
       "[INFO] validating values in column 'LIFESTAGE'\n",
-      "[INFO] excluding 0 [] samples without data in 'LIFESTAGE'\n",
       "[ERROR] invalid values in 'LIFESTAGE': {''}\n",
       "[INFO] validating values in column 'SEX'\n",
-      "[INFO] excluding 0 [] samples without data in 'SEX'\n",
       "[ERROR] invalid values in 'SEX': {''}\n",
       "[INFO] validating time column 'TIME_OF_COLLECTION'\n",
       "[INFO] excluding 191 ['NOT_COLLECTED', ''] samples without data in 'TIME_OF_COLLECTION'\n",
@@ -85,27 +84,51 @@
       "[INFO] excluding 192 ['NOT_COLLECTED', ''] samples without data in 'DURATION_OF_COLLECTION'\n",
       "[ERROR] invalid times in 'DURATION_OF_COLLECTION': ['P1WT1H' 'TEST']\n",
       "[INFO] validating values in column 'COLLECTION_METHOD'\n",
-      "[INFO] excluding 0 [] samples without data in 'COLLECTION_METHOD'\n",
       "[ERROR] invalid values in 'COLLECTION_METHOD': {''}\n",
       "[INFO] validating values in column 'OUTDOORS_INDOORS'\n",
-      "[INFO] excluding 0 [] samples without data in 'OUTDOORS_INDOORS'\n",
       "[ERROR] invalid values in 'OUTDOORS_INDOORS': {''}\n",
+      "[INFO] validating freetext chars in DESCRIPTION_OF_COLLECTION_METHOD\n",
+      "[INFO] excluding 96 [''] samples without data in 'DESCRIPTION_OF_COLLECTION_METHOD'\n",
+      "[INFO] validating freetext chars in PRESERVATION_APPROACH\n",
+      "[INFO] excluding 95 [''] samples without data in 'PRESERVATION_APPROACH'\n",
+      "[ERROR] found non-standard characters in column PRESERVATION_APPROACH, SERIES [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95]. Regex: \"^[A-z0-9.,\\-_ ]+$\"\n",
       "[INFO] validating values in column 'BLOOD_MEAL'\n",
       "[INFO] excluding 193 [''] samples without data in 'BLOOD_MEAL'\n",
       "[INFO] validating values in column 'GRAVIDITY'\n",
       "[INFO] excluding 193 [''] samples without data in 'GRAVIDITY'\n",
+      "[INFO] validating freetext chars in HABITAT\n",
+      "[INFO] excluding 96 [''] samples without data in 'HABITAT'\n",
       "[INFO] validating date column 'DATE_OF_PRESERVATION'\n",
       "[INFO] excluding 96 [''] samples without data in 'DATE_OF_PRESERVATION'\n",
       "[INFO] checking that DATE_OF_COLLECTION are earlier than DATE_OF_PRESERVATION\n",
       "[ERROR] DATE_OF_COLLECTION values are later than DATE_OF_PRESERVATION for SERIES [9]\n",
       "[INFO] validating numeric format in ELEVATION\n",
       "[INFO] excluding 193 [''] samples without data in 'ELEVATION'\n",
+      "[ERROR] found non-numeric value in ELEVATION: \"700m\"\n",
+      "[INFO] validating freetext chars in OTHER_ORGANISMS\n",
+      "[INFO] excluding 288 [''] samples without data in 'OTHER_ORGANISMS'\n",
+      "[INFO] validating freetext chars in BIOASSAYS\n",
+      "[INFO] excluding 288 [''] samples without data in 'BIOASSAYS'\n",
+      "[INFO] validating freetext chars in COLLECTOR_SAMPLE_ID\n",
+      "[INFO] excluding 280 [''] samples without data in 'COLLECTOR_SAMPLE_ID'\n",
+      "[INFO] validating freetext chars in OTHER_INFORMATION\n",
+      "[INFO] excluding 282 [''] samples without data in 'OTHER_INFORMATION'\n",
+      "[INFO] validating freetext chars in MISC_METADATA\n",
+      "[INFO] excluding 288 [''] samples without data in 'MISC_METADATA'\n",
+      "[INFO] validating freetext chars in DNA_EXTRACTION_DESCRIPTION\n",
+      "[INFO] excluding 288 [''] samples without data in 'DNA_EXTRACTION_DESCRIPTION'\n",
       "[INFO] validating numeric format in DNA_EXTRACT_VOLUME_PROVIDED\n",
       "[INFO] excluding 288 [''] samples without data in 'DNA_EXTRACT_VOLUME_PROVIDED'\n",
       "[INFO] validating numeric format in DNA_EXTRACT_CONCENTRATION\n",
       "[INFO] excluding 288 [''] samples without data in 'DNA_EXTRACT_CONCENTRATION'\n",
       "[INFO] validating contributors in '../data/Anopheles_Metadata_Manifest_V4.0_20220825.xlsx'\n",
-      "[WARNING] trailing spaces found in column 'FIRST_NAME', SERIES [0, 1]. Removing for validation\n",
+      "[WARNING] trailing spaces found in column 'FIRST_NAME', SERIES [0, 1]. Removing for validation\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "[WARNING] suspect template contributor was not removed\n",
       "[ERROR] duplicated names ['Darwin Charles R.']\n",
       "[ERROR] invalid email addresses ['darwin_darwin.darwin']\n",
@@ -161,30 +184,31 @@
     "    # purple cols - validate non-blank samples only\n",
     "    df = validate_taxonomy(df, ncbi, anospp=True, na_values = [''])\n",
     "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict)\n",
-    "    # IDENTIFIED_HOW not checked\n",
+    "    validate_specimen_id_risk(df)\n",
+    "    validate_freetext('IDENTIFIED_HOW', df[~is_blank])\n",
     "    validate_values('LIFESTAGE', df[~is_blank], valid_dict)\n",
     "    validate_values('SEX', df[~is_blank], valid_dict)\n",
     "    validate_time('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_time_period('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
     "    validate_values('OUTDOORS_INDOORS', df[~is_blank], valid_dict)\n",
-    "    # DESCRIPTION_OF_COLLECTION_METHOD not checked\n",
-    "    # PRESERVATION_APPROACH not checked\n",
+    "    validate_freetext('DESCRIPTION_OF_COLLECTION_METHOD', df[~is_blank])\n",
+    "    validate_freetext('PRESERVATION_APPROACH', df[~is_blank])\n",
     "    \n",
     "    # white cols - validate all samples\n",
     "    validate_values('BLOOD_MEAL', df, valid_dict, na_values=[''])\n",
     "    validate_values('GRAVIDITY', df, valid_dict, na_values=[''])\n",
-    "    # HABITAT not checked\n",
+    "    validate_freetext('HABITAT', df)\n",
     "    date_pres = validate_date('DATE_OF_PRESERVATION', df, na_values=['']) # allow for empty values unlike DATE_OF_COLLECTION\n",
     "    compare_dates(before=date_coll, after=date_pres)\n",
     "    validate_float('ELEVATION', df, na_values=[''])\n",
     "    # WHAT_3_WORDS not checked\n",
-    "    # OTHER_ORGANISMS not checked\n",
-    "    # BIOASSAYS not checked\n",
-    "    # COLLECTOR_SAMPLE_ID  not checked\n",
-    "    # OTHER_INFORMATION  not checked\n",
-    "    # MISC_METADATA not checked\n",
-    "    # DNA_EXTRACTION_DESCRIPTION not checked\n",
+    "    validate_freetext('OTHER_ORGANISMS', df)\n",
+    "    validate_freetext('BIOASSAYS', df)\n",
+    "    validate_freetext('COLLECTOR_SAMPLE_ID', df)\n",
+    "    validate_freetext('OTHER_INFORMATION', df)\n",
+    "    validate_freetext('MISC_METADATA', df)\n",
+    "    validate_freetext('DNA_EXTRACTION_DESCRIPTION', df)\n",
     "    validate_float('DNA_EXTRACT_VOLUME_PROVIDED', df, na_values=[''])\n",
     "    validate_float('DNA_EXTRACT_CONCENTRATION', df, na_values=[''])\n",
     "    \n",
@@ -213,7 +237,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/g7/vnlptw7d5pb544zsj_bypk44000h93/T/ipykernel_23921/1375769833.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Setup complete'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/g7/vnlptw7d5pb544zsj_bypk44000h93/T/ipykernel_52198/1375769833.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Setup complete'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mException\u001b[0m: Setup complete"
      ]
     }
