--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "230f6339",
    "metadata": {},
    "outputs": [
@@ -28,26 +28,22 @@
       "[INFO] checking manifest columns against template\n",
       "[INFO] extracting value validation data from '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'\n",
       "[INFO] validating SERIES\n",
+      "[INFO] validating freetext chars in CATCH_LOT\n",
       "[INFO] validating RACK_OR_PLATE_ID and TUBE_OR_WELL_ID\n",
       "[WARNING] found PLATE_ONLY plate SANG_001, expanding to well-level\n",
       "[INFO] found 288 samples across 3 plates\n",
       "[INFO] Checking and excluding blank samples\n",
       "[WARNING] 14 blanks located across 3 plates, 274 samples of 288 left for downstream analysis\n",
       "[INFO] validating values in column 'ORGANISM_PART'\n",
-      "[INFO] excluding 0 [] samples without data in 'ORGANISM_PART'\n",
       "[INFO] validating values in column 'PRESERVATIVE_SOLUTION'\n",
-      "[INFO] excluding 0 [] samples without data in 'PRESERVATIVE_SOLUTION'\n",
       "[INFO] validating values in column 'BOTTLE_DIRECTION'\n",
-      "[INFO] excluding 0 [] samples without data in 'BOTTLE_DIRECTION'\n",
       "[INFO] validating date column 'DATE_OF_COLLECTION'\n",
       "[INFO] excluding 0 ['NOT_COLLECTED', ''] samples without data in 'DATE_OF_COLLECTION'\n",
       "[INFO] validating country with coordinates\n",
       "[INFO] validating time column 'TIME_OF_COLLECTION'\n",
-      "[INFO] excluding 0 [] samples without data in 'TIME_OF_COLLECTION'\n",
       "[INFO] validating time period column 'DURATION_OF_COLLECTION'\n",
       "[INFO] excluding 0 ['NOT_COLLECTED'] samples without data in 'DURATION_OF_COLLECTION'\n",
       "[INFO] validating values in column 'COLLECTION_METHOD'\n",
-      "[INFO] excluding 0 [] samples without data in 'COLLECTION_METHOD'\n",
       "[INFO] validating date column 'DATE_OF_PLATING'\n",
       "[INFO] excluding 0 ['NOT_COLLECTED', ''] samples without data in 'DATE_OF_PLATING'\n",
       "[INFO] checking that DATE_OF_COLLECTION are earlier than DATE_OF_PLATING\n",
@@ -61,18 +57,32 @@
       "[INFO] validating PREDICTED_SCIENTIFIC_NAME against NCBI\n",
       "[INFO] validating values in column 'SPECIMEN_IDENTITY_RISK'\n",
       "[INFO] excluding 271 [''] samples without data in 'SPECIMEN_IDENTITY_RISK'\n",
+      "[INFO] validating SPECIMEN_IDENTITY_RISK\n",
       "[INFO] validating values in column 'LIFESTAGE'\n",
       "[INFO] excluding 274 [''] samples without data in 'LIFESTAGE'\n",
       "[INFO] validating values in column 'SEX'\n",
       "[INFO] excluding 265 [''] samples without data in 'SEX'\n",
       "[INFO] validating values in column 'SORTING_SOLUTION_USED'\n",
-      "[INFO] excluding 0 [] samples without data in 'SORTING_SOLUTION_USED'\n",
       "[INFO] validating values in column 'CATCH_BOTTLE_TEMPERATURE_STORAGE'\n",
-      "[INFO] excluding 0 [] samples without data in 'CATCH_BOTTLE_TEMPERATURE_STORAGE'\n",
       "[INFO] validating values in column 'PLATE_TEMPERATURE_STORAGE'\n",
-      "[INFO] excluding 0 [] samples without data in 'PLATE_TEMPERATURE_STORAGE'\n",
+      "[INFO] validating freetext chars in MORPHOSPECIES_DESCRIPTION\n",
+      "[INFO] excluding 265 [''] samples without data in 'MORPHOSPECIES_DESCRIPTION'\n",
+      "[INFO] validating freetext chars in DESCRIPTION_OF_COLLECTION_METHOD\n",
+      "[INFO] excluding 84 [''] samples without data in 'DESCRIPTION_OF_COLLECTION_METHOD'\n",
+      "[INFO] validating freetext chars in HABITAT\n",
+      "[INFO] excluding 14 [''] samples without data in 'HABITAT'\n",
+      "[INFO] validating freetext chars in PRESERVATION_APPROACH\n",
+      "[INFO] excluding 218 [''] samples without data in 'PRESERVATION_APPROACH'\n",
+      "[INFO] validating freetext chars in COLLECTOR_SAMPLE_ID\n",
+      "[INFO] excluding 267 [''] samples without data in 'COLLECTOR_SAMPLE_ID'\n",
+      "[INFO] validating freetext chars in VOUCHER_ID\n",
+      "[INFO] excluding 286 [''] samples without data in 'VOUCHER_ID'\n",
       "[INFO] validating numeric format in ELEVATION\n",
       "[INFO] excluding 288 [''] samples without data in 'ELEVATION'\n",
+      "[INFO] validating freetext chars in OTHER_INFORMATION\n",
+      "[INFO] excluding 286 [''] samples without data in 'OTHER_INFORMATION'\n",
+      "[INFO] validating freetext chars in MISC_METADATA\n",
+      "[INFO] excluding 288 [''] samples without data in 'MISC_METADATA'\n",
       "[INFO] validating contributors in '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'\n",
       "[WARNING] trailing spaces found in column 'FIRST_NAME', SERIES [0]. Removing for validation\n",
       "[WARNING] suspect template contributor was not removed\n",
@@ -109,9 +119,9 @@
     "    # orange cols\n",
     "    # exclude empty series\n",
     "    df = validate_series(df)\n",
-    "    # CATCH_LOT not checked TODO do not allow missing\n",
+    "    validate_freetext('CATCH_LOT', df, na_values=[])\n",
     "    df = validate_plates_wells(df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
-    "    # check and exclude blanks - TODO yield all samples for STS\n",
+    "    # check and exclude blanks\n",
     "    is_blank = check_blanks(df)\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
@@ -131,8 +141,8 @@
     "    compare_dates(before=date_coll, after=date_plat)\n",
     "    # taxonomy validation adds taxid columns to original dataframe\n",
     "    df = validate_taxonomy(df, ncbi, anospp=False, na_values = [''])\n",
-    "    # TODO check that SPECIMEN_IDENTITY_RISK only filled where species ID exists\n",
     "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict, na_values=[''])\n",
+    "    validate_specimen_id_risk(df)\n",
     "    validate_values('LIFESTAGE', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_values('SEX', df[~is_blank], valid_dict, na_values=[''])\n",
     "    validate_values('SORTING_SOLUTION_USED', df[~is_blank], valid_dict)\n",
@@ -140,15 +150,16 @@
     "    validate_values('PLATE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict)\n",
     "    \n",
     "    # white cols - validated for all samples\n",
-    "    # MORPHOSPECIES_DESCRIPTION not checked\n",
-    "    # DESCRIPTION_OF_COLLECTION_METHOD not checked\n",
-    "    # HABITAT not checked\n",
-    "    # PRESERVATION_APPROACH not checked - should match DATE_OF_PRESERVATION\n",
-    "    # COLLECTOR_SAMPLE_ID not checked - STS will need something here\n",
-    "    # VOUCHER_ID not checked\n",
+    "    validate_freetext('MORPHOSPECIES_DESCRIPTION', df)\n",
+    "    validate_freetext('DESCRIPTION_OF_COLLECTION_METHOD', df)\n",
+    "    validate_freetext('HABITAT', df)\n",
+    "    validate_freetext('PRESERVATION_APPROACH', df)\n",
+    "    # TODO check if STS will need something here\n",
+    "    validate_freetext('COLLECTOR_SAMPLE_ID', df)\n",
+    "    validate_freetext('VOUCHER_ID', df)\n",
     "    validate_float('ELEVATION', df, na_values=[''])\n",
-    "    # OTHER_INFORMATION not checked\n",
-    "    # MISC_METADATA not checked\n",
+    "    validate_freetext('OTHER_INFORMATION', df)\n",
+    "    validate_freetext('MISC_METADATA', df)\n",
     "    # IDENTIFIED_BY not checked\n",
     "    # IDENTIFIER_AFFILIATION not checked\n",
     "    \n",
@@ -167,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "597705bb",
    "metadata": {},
    "outputs": [
@@ -178,7 +189,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/g7/vnlptw7d5pb544zsj_bypk44000h93/T/ipykernel_24102/1375769833.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Setup complete'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/g7/vnlptw7d5pb544zsj_bypk44000h93/T/ipykernel_52182/1375769833.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Setup complete'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mException\u001b[0m: Setup complete"
      ]
     }
@@ -189,27 +200,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6b170f12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] # manifest ../results/20221018_biosc_test/NBGW-2206-Manifest-V2.0.xlsx\n",
-      "[WARNING] extra columns in filled manifest compared to template: {'SYMBIONT', 'GAL', 'TAXON_ID', 'SCIENTIFIC_NAME', 'PREDICTED_TAXON_ID', 'SPECIMEN_ID', 'HAZARD_GROUP', 'REGULATORY_COMPLIANCE', 'CATCH_SOLUTION'}\n",
-      "[WARNING] 31 blanks located across 31 plates, 2945 samples of 2976 left for downstream analysis\n",
-      "[ERROR] invalid times in 'DURATION_OF_COLLECTION': ['NOT_APPLICABLE']\n",
-      "[ERROR] invalid values in 'COLLECTION_METHOD': {'OTHER'}\n",
-      "[ERROR] order: {'Opilones'} not found in NCBI Taxonomy\n",
-      "[WARNING] order: found unexpected rank for Acari (taxid 6933): subclass\n",
-      "[WARNING] order: found unexpected rank for Collembola (taxid 30001): class\n",
-      "[WARNING] trailing spaces found in column 'FIRST_NAME', SERIES [0]. Removing for validation\n",
-      "[WARNING] suspect template contributor was not removed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fn = '../results/20221018_biosc_test/NBGW-2206-Manifest-V2.0.xlsx'\n",
     "df = validate_bioscan(fn, samples_sheet='Metadata Entry', contrib_sheet='TAB1 Contributors')"
