--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -114,7 +114,7 @@
      "output_type": "stream",
      "text": [
       "[WARNING] trailing spaces found in column 'COLLECTION_LOCATION', SERIES [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95]. Removing for validation\n",
-      "[WARNING] trailing spaces found in column 'PREDICTED_SCIENTIFIC_NAME', SERIES [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95]. Removing for validation\n",
+      "[WARNING] trailing spaces found in column 'PREDICTED_SCIENTIFIC_NAME', SERIES [2, 3, 4, 5, 6, 7, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95]. Removing for validation\n",
       "[WARNING] trailing spaces found in column 'PRESERVATION_APPROACH', SERIES [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208, 209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234, 235, 236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247, 248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260, 261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273, 274, 275, 276, 277, 278, 279, 280, 281, 282, 283, 284, 285, 286, 287, 288]. Removing for validation\n",
       "[WARNING] trailing spaces found in column 'HABITAT', SERIES [2]. Removing for validation\n"
      ]
@@ -244,9 +244,11 @@
     "def exclude_missing(series, na_values=[]):\n",
     "    \n",
     "    # valid missing data \n",
-    "    no_data = (series.isin(na_values))\n",
-    "    logging.info('excluding {} {!r} samples without data in {!r}'.format(no_data.sum(), na_values, series.name))\n",
-    "    return series[~no_data]\n",
+    "    if len(na_values) > 0:\n",
+    "        no_data = (series.isin(na_values))\n",
+    "        logging.info('excluding {} {!r} samples without data in {!r}'.format(no_data.sum(), na_values, series.name))\n",
+    "        return series[~no_data]\n",
+    "    return series\n",
     "    \n",
     "exclude_missing(df['TIME_OF_COLLECTION'], na_values=['NOT_COLLECTED',''])"
    ]
@@ -982,7 +984,7 @@
       "[INFO] validating PREDICTED_GENUS against NCBI\n",
       "[INFO] genus: using only first matching rank for Anopheles (taxid 7164): genus\n",
       "[INFO] validating PREDICTED_SCIENTIFIC_NAME against NCBI\n",
-      "[ERROR] species: {'Anopheles stricklandi', '', 'Anopheles test'} not found in NCBI Taxonomy\n",
+      "[ERROR] species: {'', 'Anopheles stricklandi', 'Anopheles test'} not found in NCBI Taxonomy\n",
       "[ERROR] species: \"Anopheles stricklandi\" found in Harbach list, but not in NCBI Taxonomy\n",
       "[INFO] cannot validate PREDICTED_SCIENTIFIC_NAME for \"Anopheles test\", skipping taxonomy consistency check\n",
       "[INFO] cannot validate PREDICTED_SCIENTIFIC_NAME for \"Anopheles stricklandi\", skipping taxonomy consistency check\n",
@@ -1613,9 +1615,40 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[INFO] validating SPECIMEN_IDENTITY_RISK\n",
+      "[ERROR] SPECIMEN_IDENTITY_RISK should be Y in SERIES [8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def validate_specimen_id_risk(df):\n",
+    "    \n",
+    "    logging.info(f'validating SPECIMEN_IDENTITY_RISK')\n",
+    "    \n",
+    "    if 'SPECIMEN_IDENTITY_RISK' not in df.columns:\n",
+    "        logging.error(f'SPECIMEN_IDENTITY_RISK column not found in manifest')\n",
+    "        return\n",
+    "    \n",
+    "    # missing species name, but no idenitity risk\n",
+    "    invalid_risk = ((df.PREDICTED_SCIENTIFIC_NAME == '') & (df.SPECIMEN_IDENTITY_RISK == 'N'))\n",
+    "    \n",
+    "    if invalid_risk.any():\n",
+    "        logging.error(f'SPECIMEN_IDENTITY_RISK should be Y in SERIES {df.loc[invalid_risk].index.to_list()}')\n",
+    "validate_specimen_id_risk(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "[INFO] validating numeric format in ELEVATION\n",
-      "[INFO] excluding 0 [] samples without data in 'ELEVATION'\n",
-      "[ERROR] found non-numeric value in ELEVATION: \"\"\n"
+      "[INFO] excluding 193 [''] samples without data in 'ELEVATION'\n",
+      "[ERROR] found non-numeric value in ELEVATION: \"700m\"\n"
      ]
     }
    ],
@@ -1635,12 +1668,48 @@
     "            float(val)\n",
     "        except:\n",
     "            logging.error(f'found non-numeric value in {col}: \"{val}\"')\n",
-    "validate_float('ELEVATION', df)"
+    "validate_float('ELEVATION', df, na_values=[''])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] validating freetext chars in IDENTIFIED_HOW\n",
+      "[INFO] excluding 97 [''] samples without data in 'IDENTIFIED_HOW'\n",
+      "[ERROR] found non-standard characters in column IDENTIFIED_HOW, SERIES [6]. Regex: \"^[A-z0-9.,\\- ]+$\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "def validate_freetext(col, df, na_values=['']):\n",
+    "    \n",
+    "    logging.info(f'validating freetext chars in {col}')\n",
+    "    \n",
+    "    if col not in df.columns:\n",
+    "        logging.error(f'{col} column not found in manifest')\n",
+    "        return\n",
+    "    series = df[col]\n",
+    "    series = exclude_missing(series, na_values)\n",
+    "    \n",
+    "    regex = '^[A-z0-9.,\\-_ ]+$'\n",
+    "    \n",
+    "    is_valid_freetext = series.str.match(regex)\n",
+    "    if not is_valid_freetext.all():\n",
+    "        logging.error('found non-standard characters in column {}, SERIES {}. Regex: \"{}\"'.format(\n",
+    "        col, series.loc[~is_valid_freetext].index.to_list(), regex))\n",
+    "\n",
+    "validate_freetext('IDENTIFIED_HOW', df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1727,20 +1796,20 @@
     "    if is_dup_name.any():\n",
     "        logging.error('duplicated names {}'.format(\n",
     "                df.loc[is_dup_name, 'NAME'].to_list()))\n",
-    "        \n",
-    "    is_valid_email = df['EMAIL ADDRESS'].str.match('[A-z0-9._%+-]+@[A-z0-9.-]+\\.[A-z]{2,}')\n",
+    "    \n",
+    "    # TODO update template with underscore in email column\n",
+    "    is_valid_email = df['EMAIL ADDRESS'].str.match('^[A-z0-9._%+-]+@[A-z0-9.-]+\\.[A-z]{2,}$')\n",
     "    if not is_valid_email.all():\n",
     "        logging.error('invalid email addresses {}'.format(\n",
     "                df.loc[~is_valid_email, 'EMAIL ADDRESS'].to_list()))\n",
     "    \n",
-    "    # TODO confirmation for contributing partners\n",
     "    is_confirmed = (df['CONFIRMATION'] == 'YES')\n",
     "    if not is_confirmed.any():\n",
     "        logging.error('confirmation lacking for any contributors')\n",
     "        \n",
     "    return df\n",
     "        \n",
-    "df = validate_contributors(anospp_fn)"
+    "contrib_df = validate_contributors(anospp_fn)"
    ]
   },
   {
