--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -1701,7 +1701,7 @@
     "    \n",
     "    is_valid_freetext = series.str.match(regex)\n",
     "    if not is_valid_freetext.all():\n",
-    "        logging.error('found non-standard characters in column {}, SERIES {}. Regex: \"{}\"'.format(\n",
+    "        logging.warning('found non-standard characters in column {}, SERIES {}. Regex: \"{}\"'.format(\n",
     "        col, series.loc[~is_valid_freetext].index.to_list(), regex))\n",
     "\n",
     "validate_freetext('IDENTIFIED_HOW', df)"
